[gd_scene load_steps=2 format=3 uid="uid://6jdc3bsgdb3l"]

[ext_resource type="Script" path="res://addons/music_player/editor/create_track_dialogue.gd" id="1_iwomk"]

[node name="CreateTrackDialogue" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_iwomk")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 2
vertical = true

[node name="NameContainer" type="FlowContainer" parent="BoxContainer"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="BoxContainer/NameContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="BoxContainer/NameContainer"]
layout_mode = 2
text = "Name"

[node name="ArtistContainer" type="FlowContainer" parent="BoxContainer"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="BoxContainer/ArtistContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="BoxContainer/ArtistContainer"]
layout_mode = 2
text = "Artist"

[node name="BPMContainer" type="FlowContainer" parent="BoxContainer"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="BoxContainer/BPMContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="BoxContainer/BPMContainer"]
layout_mode = 2
text = "BPM"

[node name="ButtonsContainer" type="BoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="BoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Cancel"

[node name="Control" type="Control" parent="BoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateButton" type="Button" parent="BoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Create Track!"

[connection signal="pressed" from="BoxContainer/ButtonsContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="BoxContainer/ButtonsContainer/CreateButton" to="." method="_on_create_button_pressed"]
